Commit rapida